--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -1,8 +1,8 @@
 ---
-const { slug, title, tags, description, date } = Astro.props;
+const { slug, title, tags, description, date, attributes = {} } = Astro.props;
 ---
 
-<li class="post">
+<li class="post" {...attributes}>
 	<a href={`/post/${slug}/`} class="title">{title}</a>
 	<time datetime={date}>
 		{
