Fix CORS error for netlify identify function

--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -20,7 +20,7 @@ import { title } from "../settings/settings.json";
 		</main>
 		<Footer />
 		<ColorScript />
-		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+		<script is:inline src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 		<script>
 			if (window.netlifyIdentity) {
 				window.netlifyIdentity.on("init", (user) => {
